test/error/sema/bare-return-in-nonvoid-fn.dsk
func f(x: int) -> int
    return
end
